Pricing GrAPH fIX

--- a/findly-builder/src/app/components/pricing/pricing.component.html
+++ b/findly-builder/src/app/components/pricing/pricing.component.html
@@ -122,13 +122,13 @@
           <div class="col-12 main-title">Usage Metrics</div>
           <div class="row col-12 m-0 p-0 cards-usage-metrics">
               <div class="col-6 metrics-data">
-                <div class="inner-content" [ngStyle]="{'opacity':isyAxisDocumentdata?'0':'0.5','pointer-events':isyAxisDocumentdata?'auto':'none'}">
+                <div class="inner-content" > <!-- [ngStyle]="{'opacity':isyAxisDocumentdata?'0':'0.5','pointer-events':isyAxisDocumentdata?'auto':'none'}"-->
                     <div class="title">Document Ingestion Analytics <span>| {{monthRange}} (Last 6 Months)</span></div>
                     <div echarts [options]="documentGraph" class="demo-chart-graphMode" style="height: 320px;"></div>
                 </div>
               </div>
               <div class="col-6 metrics-data">
-                <div class="inner-content" [ngStyle]="{'opacity':isyAxisQuerydata?'0':'0.5','pointer-events':isyAxisQuerydata?'auto':'none'}">
+                <div class="inner-content" > <!-- [ngStyle]="{'opacity':isyAxisQuerydata?'0':'0.5','pointer-events':isyAxisQuerydata?'auto':'none'}" -->
                     <div class="title">Query Usage Analytics <span>| {{monthRange}} (Last 6 Months)</span></div>
                     <div echarts [options]="queryGraph" class="demo-chart-graphMode" style="height: 320px;"></div>
                 </div>
