--- a/findly-builder/src/app/components/pricing/pricing.component.html
+++ b/findly-builder/src/app/components/pricing/pricing.component.html
@@ -6,14 +6,14 @@
 <div class="pricing-container-wrapper">
   <div class="title-header d-flex align-items-center justify-content-between">
     <div>Plan Details</div>
-    <button class="kr-sg-button-primary btn_lg" *ngIf="showUpgradeBtn" (click)="currentSubscriptionPlan.subscription.changesScheduledFor=='none'||currentSubscriptionPlan.subscription.status=='expired'?compare('choosePlans',currentSubscriptionPlan.subscription):revertCancel()">{{currentSubscriptionPlan.subscription.changesScheduledFor=='none'?'Upgrade':(currentSubscriptionPlan.subscription.changesScheduledFor=='cancel'&&currentSubscriptionPlan.subscription.status!='expired')?'Revert Cancellation':'Reactivate'}}</button>  
+    <button class="kr-sg-button-primary btn_lg" *ngIf="showUpgradeBtn" (click)="currentSubscriptionPlan.subscription.changesScheduledFor=='none'||currentSubscriptionPlan.subscription.status=='expired'||currentSubscriptionPlan.subscription.changesScheduledFor=='downgrade'?compare('choosePlans',currentSubscriptionPlan.subscription):revertCancel()">{{currentSubscriptionPlan.subscription.changesScheduledFor=='none'||currentSubscriptionPlan.subscription.changesScheduledFor=='downgrade'?'Upgrade':(currentSubscriptionPlan.subscription.changesScheduledFor=='cancel'&&currentSubscriptionPlan.subscription.status!='expired')?'Revert Cancellation':'Reactivate'}}</button>  
   </div>
   <perfect-scrollbar class="pricing-scroll">
     <div class="pricing-details-main-sec" [ngStyle]='{"opacity":currentSubscriptionPlan&&currentSubscriptionPlan.subscription&&currentSubscriptionPlan.subscription.status=="expired"?"0.3":null}'>
         <div class="row col-12 card-plans">
             <div class="col-6 current-plan">
               <div class="inner-content">
-                <div class="title">Current Subscription Plan</div>
+                <div class="title">{{currentSubscriptionPlan&&currentSubscriptionPlan.subscription&&currentSubscriptionPlan.subscription.status=="expired"?'Subscription Cancelled':'Current Subscription Plan'}}</div>
                 <div class="kr-sg-dropdowns" [hidden]="currentSubscriptionPlan&&currentSubscriptionPlan.subscription.changesScheduledFor=='cancel'">                
                   <div class="dropdown dropdown-open">
                       <button class="dropdown-toggle dropdown-input" data-toggle="dropdown"><img src="assets/icons/pricing/overflow.svg"></button>                                            
@@ -31,7 +31,7 @@
                   </div>
                   <div class="plan-time">
                     <div class="started-title">{{currentSubscriptionPlan.subscription.planName=='Free'?'Started On':currentSubscriptionPlan.subscription.changesScheduledFor=='none'?'Renewal Date':currentSubscriptionPlan.subscription.status=='expired'?'End Date':'Valid till'}}</div>
-                    <div class="started-date">{{ (currentSubscriptionPlan.subscription.status=='expired'?currentSubscriptionPlan.subscription.expiredOn:currentSubscriptionPlan.subscription.createdAt) | dateFormatPipe:'d MMMM YYYY'}}</div>
+                    <div class="started-date">{{(currentSubscriptionPlan.subscription.planName=='Free'?currentSubscriptionPlan.subscription.createdAt:currentSubscriptionPlan.subscription.changesScheduledFor=='none'?currentSubscriptionPlan.subscription.endDate:currentSubscriptionPlan.subscription.status=='expired'?currentSubscriptionPlan.subscription.expiredOn:currentSubscriptionPlan.subscription.endDate)| dateFormatPipe:'D MMMM YYYY'}}</div>
                   </div>
                 </div>
               </div>
