--- a/findly-builder/src/app/components/add-faq/add-faq.component.html
+++ b/findly-builder/src/app/components/add-faq/add-faq.component.html
@@ -1,3 +1,4 @@
+<div class="add-faq-modal-popup">
 <ng-template #botResponse let-responses="responses" let-responseObj='responseObj' let-type="reponseType" let-id='id' let-index='index'>  
   <!-- <md-editor formControlName="botResponse" [options]="options" required height="300px"></md-editor> -->
   <!-- add clases when image split mode .image-split-mode and swapmode add this class .swap-positions-->
@@ -430,15 +431,15 @@
   <div class="add-alternative-questions row" *ngIf="!isFollowUp && faqData"> 
     <div class="col-8 pl-0 pr-2">
         <div class="label-text text-truncate">Alternate Questions
-            <span *ngIf="faqData">{{faqData._source.alternateQuestions?.length>0?'('+faqData._source.alternateQuestions?.length+')':''}}</span>
+            <span *ngIf="faqData">{{faqData._source.faqAltQuestions?.length>0?'('+faqData._source.faqAltQuestions?.length+')':''}}</span>
             <!-- ({{(selectedFaq.alternateQuestions?selectedFaq.alternateQuestions.length:0)}}) -->
         </div>
         <div class="added-tags text-truncate">Add alternate forms of the question.</div>
     </div>
-    <div class=" col-4 text-right pr-0" *ngIf="faqData._source.alternateQuestions?.length>0 || isAdd">
+    <div class=" col-4 text-right pr-0" *ngIf="faqData._source.faqAltQuestions?.length>0 || isAdd">
         <button class="kr-sg-button-ghost" (click)="addAltQues();"><img src="assets/icons/editor/plus-add.svg" class="mr-2" >Alternate Question</button>
     </div>
-    <div class="col-12 p-0 " *ngIf="!faqData._source.alternateQuestions?.length && !isAdd">
+    <div class="col-12 p-0 " *ngIf="!faqData._source.faqAltQuestions?.length && !isAdd">
         <button class="kr-sg-button-primary btn_lg" (click)="addAltQues()">Add</button>
     </div>
   </div>
@@ -446,11 +447,11 @@
       <app-add-alternate-question (cancelAltQuestion)="isAdd=false;" (saveAltQuestion)="addAnotherAlternate()" [faqServ]="faqServiceAlt" [isFromFaqsForm]="true"></app-add-alternate-question>
   </div>
   
-  <ng-container *ngIf="faqData && faqData._source && faqData._source.alternateQuestions?.length">
-  <div class="added-questions-list mt-2" *ngFor="let alternateQuestion of faqData._source?.alternateQuestions; let alterIndex = index" >
-     <div class="pointer content-body-question row" *ngIf="editAltQuestionIndex !== alterIndex" (click)="editAltQuestion(alternateQuestion.question,alterIndex);">
+  <ng-container *ngIf="faqData && faqData._source && faqData._source.faqAltQuestions?.length">
+  <div class="added-questions-list mt-2" *ngFor="let alternateQuestion of faqData._source?.faqAltQuestions; let alterIndex = index" >
+     <div class="pointer content-body-question row" *ngIf="editAltQuestionIndex !== alterIndex" (click)="editAltQuestion(alternateQuestion,alterIndex);">
       
-      <div class=" col-10 group-name question-name text-truncate" title="{{alternateQuestion.question}}">{{alternateQuestion.question}}</div>
+      <div class=" col-10 group-name question-name text-truncate" title="{{alternateQuestion}}">{{alternateQuestion}}</div>
       <!-- <div class="added-tags text-truncate">
           <span class="tags-data" *ngFor="let keyword of alternateQuestion?.keywords">#{{keyword.keyword}}&nbsp;</span>
       </div> -->
@@ -541,3 +542,4 @@
  
 </kr-modal> 
 <!-- preview image modal popup start from here -->
+</div>
