--- a/findly-builder/src/app/helpers/components/upgrade-plan/upgrade-plan.component.html
+++ b/findly-builder/src/app/helpers/components/upgrade-plan/upgrade-plan.component.html
@@ -127,7 +127,7 @@
     </div>
   </perfect-scrollbar>
   <div class="modal-footer text-right">
-    <button class="kr-sg-button-primary btn_lg" (click)="paymentPlan(overageData.overageShow)">Pay</button>
+    <button class="kr-sg-button-primary btn_lg" (click)="paymentPlan(overageData.overageShow)" [disabled]="btnDisable">Pay</button>
     <button class="kr-sg-button-secondary backbtn btn_md" (click)="closeOrderConfPopup()">Cancel</button>
   </div>
 </kr-modal>
@@ -144,9 +144,10 @@
   </div>
   <perfect-scrollbar>
     <div class="modal-body">
+      <h3 *ngIf="showText">Please wait....</h3>
       <!-- <div class="mian-title-desc">You can add maximum of 2 Business Rules in your current plan, Please Upgrade the plan to add more.</div> -->
       <!-- <iframe src="{{ payementResponse.hostedPage.url }}" width="100%" height="100%" frameborder="0"></iframe> -->
-      <iframe width="100%" height="100%" frameBorder="0" [src]="urlSafe"></iframe>
+      <iframe width="100%" height="100%" frameBorder="0" [src]="urlSafe" (load)="showSpinner()"></iframe>
     </div>
   </perfect-scrollbar>
   <div class="modal-footer text-right">
