--- a/findly-builder/src/app/components/weights/weights.component.scss
+++ b/findly-builder/src/app/components/weights/weights.component.scss
@@ -343,9 +343,9 @@
                             border: 0;
                         }
                     }
-                    .tooltip {
-                        display: none !important;
-                    }
+                    // .tooltip {
+                    //     display: none !important;
+                    // }
                 }
             }
         }
