--- a/findly-builder/src/app/components/weights/weights.component.html
+++ b/findly-builder/src/app/components/weights/weights.component.html
@@ -113,7 +113,7 @@
                 <div class="label-text">{{'weights.set_weight'| translate}}</div>
                 <div class="d-flex m-0 slider_sec">
                     <div class="range_slider">
-                        <app-range-slider [customClass]='"weightsSlider"'  placement="top-center" container='body' ngbTooltip="{{addEditWeighObj.sliderObj.default}}" [allData]='addEditWeighObj.sliderObj' (valueEvent)="valueEvent($event,addEditWeighObj)"></app-range-slider>
+                        <app-range-slider [customClass]='"weightsSlider"'  [allData]='addEditWeighObj.sliderObj' (valueEvent)="valueEvent($event,addEditWeighObj)"></app-range-slider>
                     </div>
                     <div class="sliderVal" >{{addEditWeighObj.sliderObj.default}}</div>
                 </div>
