--- a/findly-builder/src/app/components/pricing/pricing.component.html
+++ b/findly-builder/src/app/components/pricing/pricing.component.html
@@ -292,7 +292,7 @@
   <perfect-scrollbar>
     <div class="modal-body">
       <ul class="cancel-subscription-list">
-        <li>Your subscription is valid till the end of billing cycle i.e.  <span>24 Nov 2021</span>.</li>
+        <li>Your subscription is valid till the end of billing cycle i.e.  <span>{{(currentSubscriptionPlan&&currentSubscriptionPlan.subscription&&currentSubscriptionPlan.subscription.endDate)| dateFormatPipe:'D MMMM YYYY'}}</span>.</li>
         <li>Post billing cycle your app will not respond to the end users.</li>
         <li>However, you will have access to your app for 15 more days after cancellation to either reactivate or take a backup of your application. After 15 days your app will be permanently deleted.</li>
       </ul>      
