--- a/findly-builder/src/app/components/facets/facets.component.scss
+++ b/findly-builder/src/app/components/facets/facets.component.scss
@@ -561,6 +561,39 @@
             }
         }
     }
+    .modal-header{
+        height: auto;
+        padding: 22px 30px;
+        border-bottom: 0px solid #BDC1C6 !important;
+        box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+        background: #fff !important;
+        display: block !important;
+        margin-bottom: 4px;
+        &.noShadow{
+            box-shadow: none;
+        }
+        .title{
+            color: #202124;
+            font-weight: normal;
+            font-size: 14px;
+            float: left;
+            font-weight: 400;
+            width: auto;
+        }
+        .close_icon{
+            cursor: pointer;
+            float: right;
+            width: 30px;
+            height: 30px;
+            background: #fff;
+            border-radius: 100%;
+            text-align: center;
+            line-height: 28px;
+            &:hover{
+                background:  #F3F8FF; 
+            }
+        }
+    }
 }
 
 .seach_add_feild {
