Apoearance type change

--- a/findly-builder/src/app/components/search-interface/search-interface.component.html
+++ b/findly-builder/src/app/components/search-interface/search-interface.component.html
@@ -184,7 +184,7 @@
       </div>
       <div class="footer-btns">
         <!-- <button class="kr-sg-button-secondary btn_lg ml-3">Back</button> -->
-        <button class="kr-sg-button-primary btn_lg ml-3" (click) = "saveResultSettings()">Save</button>        
+        <!-- <button class="kr-sg-button-primary btn_lg ml-3" (click) = "saveResultSettings()">Save</button>         -->
       </div>
   </perfect-scrollbar>
   </div>
