--- a/findly-builder/src/app/components/apps-home/apps-home.scss
+++ b/findly-builder/src/app/components/apps-home/apps-home.scss
@@ -279,7 +279,27 @@
             }
             div.empty:first-child {
                 display: block !important;
-              }
+            }
+            .empty-data-app{
+                width: 255px;                
+                background: #FFFFFF;
+                border: 1px solid #0D6EFD;
+                box-sizing: border-box;
+                border-radius: 6px;
+                margin: 10px;
+                text-align: center;
+                padding: 20px 10px;
+                cursor: pointer;
+                .img-block{
+                    margin-bottom: 13px;
+                }
+                .e-title{
+                    color: #0D6EFD;
+                    font-weight: 500;
+                    font-size: 16px;
+                    line-height: 19px;
+                }
+            }
         }
         .cards-content{
             padding: 10px;
@@ -489,30 +509,6 @@
     width: 100%;
     padding: 10%;
     white-space: break-spaces;
-}
-
-
-.onboarding-welcome-screen{
-    width: 546px;
-    margin: 0 auto;
-    /* display: flex; */
-    /* align-items: center; */
-    /* justify-content: center; */
-    /* flex-direction: column; */
-    /* height: calc(100vh - 80px); */
-    padding-top: 65px;
-    .img-block{
-        margin-bottom: 15px;
-    }
-    .welocme-user-name{
-        color: #3C4043;
-        font-weight: bold;
-        font-size: 26px;
-        line-height: 31px;
-    }
-    .kr-sg-button-primary{       
-        margin: 20px 0;
-    }
 }
 
 
