--- a/findly-builder/src/app/components/index/index.component.html
+++ b/findly-builder/src/app/components/index/index.component.html
@@ -777,7 +777,7 @@
             <li (click)="changeSimulate('content', 'source')">
               <a>Content</a>
             </li>
-            <li (click)="changeSimulate('object', 'source')"><a>Structure Data</a></li>
+            <li (click)="changeSimulate('data', 'source')"><a>Structure Data</a></li>
           </ul>
         </div>
       </div>
